<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="LoginText">Login</string>
    <string name="LoginHint">login name</string>
    <string name="password_text">password</string>
    <string name="SwitchText"> What does this do?</string>
    <string name="Checkbox_Text">Checkbox</string>
    <string name="RadioButton">Radio Button</string>
    <string name="LoginButton">Login</string>
    <string name="dialog_message">Would you like to finish the activity?</string>
    <string name="dialog_title">Activity complete!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="switch_on">Switch is on</string>
    <string name="switch_off">Switch is off</string>
    <string name="activity_completed">ListItemsActivity passed: My information to share</string>
    <string name="ChatButton">Start Chat</string>
    <string name="SendChat">Send</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="action_one">First Action</string>
    <string name="action_two">Second Action</string>
    <string name="action_three">Third Action</string>
    <string name="TestToolbar">Test Toolbar</string>
    <string name="about_action">About</string>
    <string name="tool_dialog_title">Would you like to go back?</string>
    <string name="empty_message">New message</string>
    <string name="Weather_Button">Weather Forecast</string>
    <string-array name= "cities">

        <item>Ottawa</item>
        <item>Toronto</item>
        <item>Vancouver</item>
        <item>Montreal</item>
        <item>Calgary</item>
        <item>Edmonton</item>

    </string-array>

</resources>