<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:columnCount="2"
    android:gravity="fill"
    android:rowCount="2">

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/RadioButton" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/Checkbox_Text" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/SwitchText"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:gravity="fill"
        app:srcCompat="@android:drawable/ic_menu_camera" />
</GridLayout>